--- a/api/config.yml
+++ b/api/config.yml
@@ -2,7 +2,7 @@ base_url: "https://newcastle.urbanobservatory.ac.uk/api/v1.1"
 timeout: 100000
 
 time_slice:
-  last_n_days: 7
+  last_n_days: 2
   starttime: null
   endtime: null
 
@@ -14,7 +14,7 @@ location:
   bbox_p2_y: null
 
 sensor:
-  sensor_type: "Brood"
-  theme: null
+  sensor_type: null
+  theme: Traffic
   broker: null
   data_variable: null
